added logout directive, finished up auth

--- a/public/src/view/template/signup.html
+++ b/public/src/view/template/signup.html
@@ -5,7 +5,7 @@
       <input ng-model="lastName" type="text" name="name" value="" placeholder="Last name">
       <input ng-model="email" type="text" name="name" value="" placeholder="email">
       <input ng-model="password" type="text" name="name" value="" placeholder="password">
-      <button type="submit" name="button"></button>
+      <button type="submit" name="button">Sign up</button>
     </form>
   </div>
 </div>
