--- a/public/src/css/styles/_reset.scss
+++ b/public/src/css/styles/_reset.scss
@@ -11,57 +11,36 @@ article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  box-sizing: border-box; }
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+    box-sizing: border-box;
+}
+
 
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-  display: block; }
-
+    display: block;
+}
 body {
-  line-height: 1; }
-
+    line-height: 1;
+}
 ol, ul {
-  list-style: none; }
-
+    list-style: none;
+}
 blockquote, q {
-  quotes: none; }
-
+    quotes: none;
+}
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: '';
-  content: none; }
-
+    content: '';
+    content: none;
+}
 table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-.banner {
-  font-size: 100px;
-  color: red; }
-
-.header {
-  position: relative;
-  float: left;
-  height: 10vh;
-  width: 100%;
-  background: #ABA9BF;
-  top: 0px;
-  left: 0px;
-  z-index: 2; }
-
-.menu-btn {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 18vw;
-  height: 10vh;
-  overflow: hidden;
-  background-color: #48bba0;
-  z-index: 200; }
+    border-collapse: collapse;
+    border-spacing: 0;
+}
