signup error handling, signup fixed issue keeping names from being inserted into database

--- a/public/src/view/template/signup.html
+++ b/public/src/view/template/signup.html
@@ -3,9 +3,10 @@
     <form class="" ng-submit="signUp()">
       <input ng-model="firstName" type="text" name="name" value="" placeholder="First name">
       <input ng-model="lastName" type="text" name="name" value="" placeholder="Last name">
-      <input ng-model="email" type="text" name="name" value="" placeholder="email">
+      <input server-error ng-model="email" type="text" name="name" value="" placeholder="email">
       <input ng-model="password" type="text" name="name" value="" placeholder="password">
       <button type="submit" name="button">Sign up</button>
+      <div ng-message="server">{{errorMessage.email}}</div>
     </form>
   </div>
 </div>
