basic modal functions working

--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -2,3 +2,21 @@
   <div class='menu-btn'>
   </div>
 </div>
+
+
+
+<div class="show-login" ng-click="showLogin()">
+  Log In
+</div>
+<!-- <div class="show-signup" ng-click="showSignUp()">
+  Sign Up
+</div> -->
+<div class="logout">
+<logout-directive></logout-directive>
+</div>
+
+
+<!-- LOGIN MODAL -->
+<login-directive></login-directive>
+<!-- SIGN UP MODAL -->
+<signup-directive></signup-directive>
