made a header and menu modal thing

--- a/public/src/css/main.scss
+++ b/public/src/css/main.scss
@@ -4,3 +4,4 @@
 @import "styles/reset";
 @import "styles/body";
 @import "styles/header";
+@import url('https://fonts.googleapis.com/css?family=Raleway');
