create alert cron job done(basic form), fixed issue with tokens where user id wasn't being logged

--- a/public/src/view/template/login.html
+++ b/public/src/view/template/login.html
@@ -36,4 +36,6 @@
                 </button>
               </div>
             </div>
+            <!-- probably want to move somewhere -->
+            <logout-directive></logout-directive>
          </div>
