property controller and server  prop control

--- a/public/src/css/main.scss
+++ b/public/src/css/main.scss
@@ -1,5 +1,6 @@
 @import "base/colors";
 @import "base/typography";
+@import "base/base";
 @import "styles/reset";
 @import "styles/body";
 @import "styles/header";
