--- a/public/src/view/properties.html
+++ b/public/src/view/properties.html
@@ -1,12 +1,12 @@
 
-<section class="content-properties">
+<section class=" main-container content-properties">
 
 
-    <div class="newProp">
+  <div class="prop" >
+    
+  </div>
 
-    </div>
-
-    <div ui-sref="createProperty" class="newProp">
+  <div ui-sref="createProperty" class="prop newProp">
       + add new property
     </div>
 
