fixed typography and menu

--- a/public/src/css/main.scss
+++ b/public/src/css/main.scss
@@ -1,5 +1,6 @@
 @import "base/colors";
 @import "base/typography";
+@import "styles/animate";
 @import "styles/reset";
 @import "styles/body";
 @import "styles/header";
@@ -8,4 +9,4 @@
 
 
 //properties.html
-@import "styles/properties"
+@import "styles/properties";
