--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -80,7 +80,7 @@ a {
   justify-content: center;
   align-items: center;
   align-content: space-around;
-
+  background-color: rgba(154,186,234,0.9);
   position: absolute;
   top: 10vh;
   border: 1px solid blue;
