--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -10,7 +10,7 @@
   </div>
 </section>
 <div class="menu" ng-if="menuShowing">
-  <ul>
+  <ul id="bounceMenu">
     <li class="show-login" ng-click="showLogin()">login</li></br>
   <a ui-sref='properties' ng-click="hideMenu()"><li>properties</li></a></br>
     <li>upcoming</li></br>
