--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -1,6 +1,6 @@
 <section class='header-container'>
   <div class='menu-btn-box'>
-    <button ng-click="showMenu()" class="menu-btn">menu</button>
+    <button ng-click="toggleMenu()" class="menu-btn">menu</button>
   </div>
   <div class="view-name-box">
     <div class="view-name">{{viewname}}</div>
@@ -9,13 +9,15 @@
     <img class="logo-img" src="../../src/temp_logo.png"/>
   </div>
 </section>
-<div class="menu" ng-if="menuShowing">
-  <ul id="bounceMenu">
+
+<div class="menu fade" ng-if="menuShowing">
+  <ul id="menu-items-list">
     <li class="show-login" ng-click="showLogin()">login</li></br>
-  <a ui-sref='properties' ng-click="hideMenu()"><li>properties</li></a></br>
-    <li>upcoming</li></br>
-    <li>user settings</li></br>
-    <li>about</li>
+    <a ui-sref='properties' ng-click="toggleMenu()"><li>properties</li></a></br>
+    <a ui-sref='mainAlerts' ng-click="toggleMenu()"><li>upcoming</li></a></br>
+    <a ui-sref='userSettings' ng-click="toggleMenu()"><li>user settings</li></a></br>
+    <a ui-sref='contact' ng-click="toggleMenu()"><li>about</li></a>
+  </ul>
 </div>
 
 
