styled login and signup directive template and also changed modal to state

--- a/public/src/css/styles/_login.scss
+++ b/public/src/css/styles/_login.scss
@@ -1,11 +1,17 @@
 .login-container {
   text-align: center;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.panel-body{
+  display: flex;
+  justify-content: center;
 }
 
 .credential {
-  width: 386px;
-  height: 64px;
-  margin: 10px;
   border: 1px solid grey;
   font-size: 16px;
   display: flex;
@@ -13,7 +19,57 @@
 
 .input-lg {
   font-family: $body-font;
-  font-size: 1.2rem;
+  font-size: 1.7rem;
   text-align: center;
-  width: 386px;
+  width: 613px;
+}
+
+.submit-btn{
+  width: 613px;
+  height: 121px;
+  margin: 31px;
+  border: 1px solid grey;
+  font-size: 1.7rem;
+}
+
+.login-btn{
+  background-color: $theme;
+  border: 1px solid $theme;
+}
+
+.fb-signin{
+  text-align: center;
+  padding: 42px;
+  border-color: #3B5998;
+  background-color: #3B5998;
+  color: #fff;
+}
+
+.signup-or-separator {
+  // position: relative;
+  height: 29px;
+  margin: 5px 0;
+  text-align: center;
+  background: none;
+}
+
+.signup-or-separator hr {
+  width: 90%;
+  margin: -16px auto 10px auto;
+  border-top: 1px solid #dce0e0;
+}
+
+.signup-or-separator .text {
+  display: inline-block;
+  padding: 8px;
+  margin: 0;
+  background-color: #fff;
+}
+
+.pull-left{
+  float: left;
+}
+
+.pull-right{
+  float: right;
 }
