--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -32,7 +32,7 @@ a {
     font-size: 2.7rem;
     text-align: center;
     letter-spacing: 1.4px;
-    font-family: 'Raleway', sans-serif;
+    font-family: $body-font;
     justify-content: center;
     align-items: center;
       }
@@ -46,14 +46,14 @@ a {
     justify-content: center;
     width: 64%;
     height: 100%;
-    background: #C1E6F2;
+    background: $theme;
     // flex-grow: 3;
     .view-name {
       position: relative;
       font-size: 3.8rem;
       text-align: center;
       letter-spacing: 1.4px;
-      font-family: 'Raleway', sans-serif;
+      font-family: $body-font;
       justify-content: center;
       align-items: center;
     }
@@ -84,7 +84,7 @@ a {
   position: absolute;
   top: 10vh;
   border: 1px solid blue;
-  font-family: 'Raleway', sans-serif;
+  font-family: $body-font;
 
   height: 90vh;
   width: 100%;
