the basic setup for adding a property and tasks

--- a/public/src/view/properties.html
+++ b/public/src/view/properties.html
@@ -8,7 +8,7 @@
 
   </div>
 
-  <div class="prop newProp" ui-sref="createProperty({userId: userId })">
+  <div class="prop newProp" ui-sref="createProperty">
       + add new property
     </div>
 
