got a jquery animation working

--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -10,7 +10,7 @@ a {
   height: 10vh;
   width: 100%;
   display: flex;
-  // z-index: 138;
+  z-index: 138;
 
 
 
@@ -83,7 +83,6 @@ a {
   background-color: rgba(193,186,234,0.9);
   position: absolute;
   top: 10vh;
-  border: 1px solid blue;
   font-family: 'Raleway', sans-serif;
 
   height: 90vh;
@@ -91,6 +90,7 @@ a {
   font-size: 3.8rem;
 
 }
+
 .fade.ng-enter {
   transition:.2s linear all;
   opacity:0;
