--- a/public/src/view/properties.html
+++ b/public/src/view/properties.html
@@ -3,7 +3,7 @@
 
 
 
-  <div class="prop" ui-sref="mainAlerts" ng-repeat="prop in properties" >
+  <div class="prop" ui-sref="mainAlerts({proptertyId: prop.id})" ng-repeat="prop in properties" >
 {{prop.name}} {{prop.zipcode}}
 
   </div>
