--- a/public/src/css/styles/_propertySettings.scss
+++ b/public/src/css/styles/_propertySettings.scss
@@ -1,3 +1,13 @@
+.propertyToggles {
+  display: block;
+  text-align: center;
+  margin-top: 53px;
+  font-family: $body-font;
+  height: 90vh;
+  width: 100%;
+  font-size: 3.8rem;
+}
+
 .switch {
   position: relative;
   display: inline-block;
