--- a/public/src/view/template/propertyForm_template.html
+++ b/public/src/view/template/propertyForm_template.html
@@ -1,6 +1,6 @@
 <section class="main-container">
 
-
+<div class="createPropertyInputs">
 <form class="" action="" method="post">
   <ul> Create New Property <br>
     <li><br>Property Name <br>
@@ -20,3 +20,4 @@
   <input   ng-click="send(property)" type="button" name="name" value="next">
 </form>
 </section>
+</div>
