--- a/public/src/view/template/propertySettings_template.html
+++ b/public/src/view/template/propertySettings_template.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <h2>Property Settings</h2>
 
-
+<div class="propertyToggles">
   text<div class="">
     <label class="switch">
      <input type="checkbox" checked>
@@ -29,3 +29,4 @@
      <div class="slider round"></div>
     </label>
   </div>
+</div>
