little fixes, most of adding custom tasks complete

--- a/public/src/view/template/taskSelection_template.html
+++ b/public/src/view/template/taskSelection_template.html
@@ -15,7 +15,7 @@
     <div class="" ng-click="customTaskVisibility = !customTaskVisibility">
       Add Custom Maintenance
     </div>
-    <create-task ng-show="customTaskVisibility"></create-task>
+    <create-task ng-show="customTaskVisibility" property-id="propertyId"></create-task>
     <input type="submit" value="Submit">
   </form>
 </section>
