--- a/public/src/view/template/createTask_template.html
+++ b/public/src/view/template/createTask_template.html
@@ -1,5 +1,5 @@
 <div class="create-task-container">
-  <form class="">
+  <form class="create-task-form" name="customTaskForm">
     Maintenance Name:
     <input type="text" ng-model="task.name">
     Start Date:
@@ -17,12 +17,12 @@
     </select>
     <span class="custom-interval"  ng-show="task.season === 'Custom'">
       Days inbetween:
-      <input type="text" ng-model="task.interval">
+      <input type="number" ng-model="task.dayInterval">
     </span>
     Outdoor:
     <input type="checkbox" ng-model="task.outdoor">
     Notes:
     <textarea ng-model="task.notes" rows="8" cols="40"></textarea>
-    <input type="submit" value="Submit">
+    <input type="button" value="add" ng-click="createTask(propertyId,task)">
   </form>
 </div>
