working on property settings

--- a/public/src/view/template/propertySettings_template.html
+++ b/public/src/view/template/propertySettings_template.html
@@ -4,10 +4,10 @@
 
   text<div class="">
     <label class="switch">
-     <input type="checkbox" checked>
+     <input ng-model="propertyCheckBox.value1" type="checkbox" checked>
      <div class="slider round"></div>
     </label>
-  </div>
+  </div>{{propertyCheckBox.value1}}
 
   <br><br>
 
@@ -15,17 +15,17 @@
 
   email<div class="">
     <label class="switch">
-     <input type="checkbox" checked>
+     <input ng-model="propertyCheckBox.value2" type="checkbox" checked>
      <div class="slider round"></div>
     </label>
-  </div>
+  </div>{{propertyCheckBox.value2}}
 
   <br><br>
 
 
   weather<div class="">
     <label class="switch">
-     <input type="checkbox" checked>
+     <input ng-model="propertyCheckBox.value3" type="checkbox" checked>
      <div class="slider round"></div>
-    </label>
+   </label>{{propertyCheckBox.value3}}
   </div>
