improved seasonal logic

--- a/public/src/view/template/createTask_template.html
+++ b/public/src/view/template/createTask_template.html
@@ -9,10 +9,7 @@
       <option value="Monthly">Monthly</option>
       <option value="Quarterly">Quarterly</option>
       <option value="Biannually">Biannually</option>
-      <option value="Spring">Spring</option>
-      <option value="Summer">Summer</option>
-      <option value="Fall">Fall</option>
-      <option value="Winter">Winter</option>
+      <option value="Annually">Annually</option>
       <option value="Custom">Custom</option>
     </select>
     <span class="custom-interval"  ng-show="task.season === 'Custom'">
