--- a/public/src/view/template/propertySettings_template.html
+++ b/public/src/view/template/propertySettings_template.html
@@ -4,10 +4,10 @@
 <div class="propertyToggles">
   text<div class="">
     <label class="switch">
-     <input ng-model="propertyCheckBox.value1" type="checkbox" checked>
+     <input ng-click="update()" ng-model="propertyCheckBox.value1" type="checkbox" checked>
      <div class="slider round"></div>
-    </label>
-  </div>{{propertyCheckBox.value1}}
+   </label> 
+  </div>
 
   <br><br>
 
@@ -15,18 +15,18 @@
 
   email<div class="">
     <label class="switch">
-     <input ng-model="propertyCheckBox.value2" type="checkbox" checked>
+     <input ng-click="update()" ng-model="propertyCheckBox.value2" type="checkbox" checked>
      <div class="slider round"></div>
     </label>
-  </div>{{propertyCheckBox.value2}}
+  </div>
 
   <br><br>
 
 
   weather<div class="">
     <label class="switch">
-     <input ng-model="propertyCheckBox.value3" type="checkbox" checked>
+     <input ng-click="update()" ng-model="propertyCheckBox.value3" type="checkbox" checked>
      <div class="slider round"></div>
-   </label>{{propertyCheckBox.value3}}
+   </label>
   </div>
 </div>
