done button deletes alert and updates last date

--- a/public/src/view/mainAlerts.html
+++ b/public/src/view/mainAlerts.html
@@ -16,7 +16,7 @@
       {{task.dayinterval}}
     </div>
     <div class="">
-      <input type="button" ng-click="done()" name="name" value="DONE">
+      <input type="button" ng-click="done(task.propertymaintenanceid, task.alertid)" name="name" value="DONE">
       <input type="button" ng-click="snooze()" name="name" value="SNOOZE">
     </div>
 </div>
