--- a/public/src/css/styles/_properties.scss
+++ b/public/src/css/styles/_properties.scss
@@ -1,3 +1,6 @@
+$propBoxHeight: 15vh;
+$propBoxWidth: 80%;
+
 .content-properties{
   display: flex;
   flex-direction: column;
@@ -7,22 +10,70 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  
 
-}
+
+  }
 .prop {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
   font-size: 3rem;
   text-align: center;
   margin-bottom: 40px;
-  height: 15vh;
-  width: 80%;
+  height: $propBoxHeight;
+  width: $propBoxWidth;
   border: 1px solid red;
   text-decoration: none;
   background-color: #f9e7e7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+.prop-primary-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: $propBoxHeight;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.prop-delete-button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  cursor: pointer;
+  background-color: red;
+  height: $propBoxHeight;
+  width: 15%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+}
+
+.prop-delete-confirm-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: $propBoxHeight;
+  width: 100%;
+  background-color: rgba(0,0,0,.8);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  z-index: 2;
+}
+
+.prop-delete-confirm-button {
+  cursor: pointer;
+  color: white;
+  font-size: 30px;
+}
+
 .newProp{
   height: 10vh;
 }
