refresh list of tasks after done button pushed

--- a/public/src/view/mainAlerts.html
+++ b/public/src/view/mainAlerts.html
@@ -18,7 +18,7 @@
     </div>
     <div class="">
       <input type="button" ng-click="done(task.propertymaintenanceid, task.alertid)" name="name" value="DONE">
-      <input type="button" ng-click="snooze()" name="name" value="SNOOZE">
+      <input type="button" ng-click="snooze(task.alertid)" name="name" value="SNOOZE">
     </div>
 </div>
 
