--- a/public/src/view/home.html
+++ b/public/src/view/home.html
@@ -1,1 +1,13 @@
-
+<div class="main-container">
+  <div class="text-banner-container">
+    <div id="textMessage"></div>
+    <div class="textContent">
+      <h2>My second favorite household chore is ironing.</br><span style="color:#ef585d;">My first being hitting my head on the top bunk bed until I faint.</span></h2>
+      <h4>-Erma Bombeck</h4>
+    </div>
+    <div class="textContent">
+     <h1><span style="color:#ef585d;">Manage your household tasks.</span> </br> Make Life simpler.</h1>
+    </div>
+  </div>
+  <div class="home-banner-image"></div>
+</div>
