--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -14,8 +14,8 @@
   </div>
   <div ui-sref="home" class="logo-box">
     <br>
-    hஇme
-    <!-- ᚻᛰᛖᛊ -->
+    <!-- hஇme -->
+    ᚻᛰᛖᛊ
     <!-- h卍me -->
   </div>
 </section>
