--- a/public/src/view/mainAlerts.html
+++ b/public/src/view/mainAlerts.html
@@ -14,6 +14,9 @@
       {{task.nextdate |date: shortDate}}
     </div>
     <div class="">
+      {{task.duedate |date: shortDate}}
+    </div>
+    <div class="">
       {{task.dayinterval}}
     </div>
     <div class="">
