--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -3,10 +3,10 @@ a {
   color: black;
 }
 .header-container {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  float: left;
+  // position: fixed;
+  // top: 0px;
+  // left: 0px;
+  // float: left;
   height: 10vh;
   width: 100%;
   display: flex;
@@ -91,7 +91,7 @@ a {
   height: 90vh;
   width: 100%;
   font-size: 3.8rem;
-  background-color: white;
+  background-color: rgba(255,255,255,1);
   z-index: 138;
 }
 
