starting property settings task edit functionality

--- a/public/src/css/styles/_header.scss
+++ b/public/src/css/styles/_header.scss
@@ -3,10 +3,10 @@ a {
   color: black;
 }
 .header-container {
-  // position: fixed;
-  // top: 0px;
-  // left: 0px;
-  // float: left;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  float: left;
   height: 10vh;
   width: 100%;
   display: flex;
