--- a/public/src/view/template/propertySettings_template.html
+++ b/public/src/view/template/propertySettings_template.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div class="property-settings-container">
   <h2>Property Settings</h2>
 
 <div class="propertyToggles">
@@ -6,7 +6,7 @@
     <label class="switch">
      <input ng-click="update()" ng-model="propertyCheckBox.value1" type="checkbox" checked>
      <div class="slider round"></div>
-   </label> 
+   </label>
   </div>
 
   <br><br>
