--- a/public/src/view/propertySettings.html
+++ b/public/src/view/propertySettings.html
@@ -1,1 +1,5 @@
-<property-settings></property-settings>
+<div class="main-container">
+  <property-settings></property-settings>
+  XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+  <edit-tasks></edit-tasks>
+</div>
