--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -29,7 +29,7 @@
     <a ui-sref='properties' ng-click="toggleMenu()"><li>properties</li></a></br>
     <a ui-sref='upcoming' ng-click="toggleMenu()"><li>upcoming</li></a></br>
     <a ui-sref='userSettings' ng-click="toggleMenu()"><li>user settings</li></a></br>
-    <a ui-sref='about' ng-click="toggleMenu()"><li>about</li></a>
+    <a ui-sref='contact' ng-click="toggleMenu()"><li>about</li></a>
     <li><logout-directive></logout-directive></li>
   </ul>
 </div>
