hide snooze button when task is not alert yet, changed alert color

--- a/public/src/css/styles/_properties.scss
+++ b/public/src/css/styles/_properties.scss
@@ -22,7 +22,7 @@ $propBoxWidth: 80%;
   width: $propBoxWidth;
   border: 1px solid red;
   text-decoration: none;
-  background-color: #f9e7e7;
+  background-color: #bfd7ea;
   display: flex;
   align-items: center;
   justify-content: center;
