--- a/public/src/view/template/header.html
+++ b/public/src/view/template/header.html
@@ -30,6 +30,6 @@
     <!-- <a ui-sref='mainAlerts' ng-click="toggleMenu()"><li>upcoming</li></a></br> -->
     <a ui-sref='userSettings' ng-click="toggleMenu()"><li>user settings</li></a></br>
     <a ui-sref='contact' ng-click="toggleMenu()"><li>about</li></a>
-    <li><logout-directive></logout-directive></li>
+    <a ui-sref='home' ng-click="toggleMenu()"><li><logout-directive></logout-directive></li></a>
   </ul>
 </div>
