removed type of property

--- a/public/src/view/template/propertyForm_template.html
+++ b/public/src/view/template/propertyForm_template.html
@@ -9,13 +9,13 @@
     <li>ZipCode <br>
       <input class="input" ng-model="property.zipcode" type="number" name="name" value=""></li> <br>
 
-    <li>Type <br>
+    <!-- <li>Type <br>
       <select ng-model="property.typeId" name="type_id">
         <option value="1">Anything</option>
         <option value="2">House</option>
         <option value="3">Apartment</option>
       </select>
-    </li>
+    </li> -->
   </ul>
   <input   ng-click="send(property)" type="button" name="name" value="next">
 </form>
